# the_interviewee

./: .env.example  .gitignore  AGENTS.md  README.md  REFACTORING_SUMMARY.md  SYSTEM_PROMPT_TESTING_CHANGES.md  config.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt
prompt_optimizer/: Makefile  __init__.py  alembic.ini  config.py  justfile  pytest.ini  reporter.py  requirements.txt  runner.py  schemas.py  storage.py  types.py
prompt_optimizer/agents/: __init__.py  evaluator_agent.py  generator_agent.py  prompt_generator_agent.py  refiner_agent.py  test_designer_agent.py
prompt_optimizer/connectors/: __init__.py  base.py  openai_connector.py
prompt_optimizer/examples/: basic_usage.py  openai_usage.py
prompt_optimizer/model_clients/: __init__.py  base.py  function_client.py
prompt_optimizer/optimizer/: __init__.py  base_stage.py  context.py  orchestrator.py
prompt_optimizer/reports/: __init__.py  display_results.py  save_champion_prompt.py  save_champion_qa_results.py  save_champion_questions.py  save_optimization_report.py  save_original_prompt_quick_report.py  save_original_prompt_rigorous_report.py  save_original_prompt_rigorous_results.py  save_pipeline_report.py  save_prompts_json.py  save_testcases_json.py
prompt_optimizer/storage/: __init__.py  converters.py  database.py  models.py
prompt_optimizer/tests/: README.md  __init__.py  conftest.py  test_edge_cases.py  test_full_pipeline.py  (+3 more)
src/: __init__.py  app.py  config.py  document_loader.py  prompts.py  rag_engine.py
tests/: __init__.py  test_config.py
(+52 files in other folders)
